apps/home/frigate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      nodeSelector:
        google.feature.node.kubernetes.io/coral: "true"
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.15.0-beta4
          resources:
            requests:
              cpu: 1000m
              memory: 2000M
            limits:
              memory: 4000M
              cpu: 4000m
          securityContext:
            privileged: true
          livenessProbe:
            httpGet:
              path: /api/version
              port: 5000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/version
              port: 5000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config-file
              mountPath: /config/config.yml
              subPath: config.yaml
              readOnly: true
            - name: media
              mountPath: /media
            - name: cache
              mountPath: /dev/shm
            - name: usb
              mountPath: /dev/bus/usb
      volumes:
        - name: config-file
          configMap:
            name: frigate-configmap
        - name: media
          persistentVolumeClaim:
            claimName: frigate-media
        - name: config
          persistentVolumeClaim:
            claimName: frigate-config-pvc
        - name: cache
          emptyDir:
            medium: Memory
            sizeLimit: 4Gi
        - name: usb
          hostPath:
            path: /dev/bus/usb
            type: Directory
